project/force-app/main/default/objects/Account_Contact_Relationship__c/Account_Contact_Relationship__c.object-meta.xml
<CustomObject>
    <label>Account-Contact Relationship</label>
    <pluralLabel>Account-Contact Relationships</pluralLabel>
    <nameField>
        <displayFormat>ACR-{0000000}</displayFormat>
        <label>Account-Contact Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
    <description>Junction object to manage many-to-many relationships between Accounts and Contacts with roles</description>
</CustomObject>