project/force-app/main/default/objects/Account_Contact_Relationship__c/fields/Direct_Phone__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone__c</fullName>
    <label>Direct Phone</label>
    <type>Phone</type>
</CustomField>