project/force-app/main/default/objects/Account_Contact_Relationship__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>