project/force-app/main/default/objects/Account_Contact_Relationship__c/validationRules/End_Date_Required_When_Inactive.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Required_When_Inactive</fullName>
    <active>true</active>
    <description>Requires End Date when Status is Inactive or Transferred</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Status__c, &apos;Inactive&apos;),
        ISPICKVAL(Status__c, &apos;Transferred&apos;)
    ),
    ISBLANK(End_Date__c)
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End Date is required when Status is Inactive or Transferred</errorMessage>
</ValidationRule>